fixes responsive problem with contact form title in moving under 1600px title was shifting too far down

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -62,7 +62,6 @@ h1 {
   text-align: center;
   text-decoration: none;
   text-shadow: 1px 1px 20px purple;
-  width: 50%;
 }
 
 .contact-h2:hover {
@@ -77,7 +76,6 @@ h1 {
   text-align: center;
   text-decoration: none;
   text-shadow: 1px 1px 20px rgba(128, 0, 128, 1.0), 1px 1px 50px rgba(255, 165, 0, .5), 1px 1px 60px rgba(255, 255, 255, .05);
-  width: 50%;
 }
 
 h2 {
